--- a/gold-admin-frontend/src/app/views/pages/admin/lead-management/registered-customer-request/registered-customer-request.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/lead-management/registered-customer-request/registered-customer-request.component.html
@@ -22,6 +22,11 @@
                     <mat-cell *matCellDef="let customer">{{customer.email }}
                     </mat-cell>
                 </ng-container>
+                <ng-container matColumnDef="city">
+                    <mat-header-cell *matHeaderCellDef>City</mat-header-cell>
+                    <mat-cell *matCellDef="let customer">{{customer.city | titlecase }}
+                    </mat-cell>
+                </ng-container>
                 <ng-container matColumnDef="source">
                     <mat-header-cell *matHeaderCellDef>Source</mat-header-cell>
                     <mat-cell *matCellDef="let customer">
