--- a/gold-admin-frontend/src/app/views/partials/components/loan-scrap-details/loan-scrap-details.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/loan-scrap-details/loan-scrap-details.component.html
@@ -173,7 +173,8 @@
     <div class="row kt-margin-t-15">
         <!-- loan ornaments -->
         <div class="col-12 card kt-padding-15" *ngIf="masterLoanId">
-            <label class="font-weight-bold text-color kt-margin-b-10 kt-margin-t-15">R.P.G-{{details?.loanOrnamentsDetail[0]?.currentGoldRate}}</label>
+            <label
+                class="font-weight-bold text-color kt-margin-b-10 kt-margin-t-15">R.P.G-{{details?.loanOrnamentsDetail[0]?.currentGoldRate}}</label>
             <label class="font-weight-bold text-color kt-margin-b-25 ">Ornaments - Total
                 {{details?.loanOrnamentsDetail?.length}} Ornaments</label>
             <mat-tab-group style="min-height: 300px;">
@@ -531,20 +532,57 @@
     </div>
 
     <div class="row kt-margin-t-15">
-        <div class="col-12 card kt-padding-15" *ngIf="masterLoanId">
-            <label class="font-weight-bold text-color kt-margin-b-25 kt-margin-t-25">Disbursement</label>
-            <div class="row">
-                <kt-disburse [disable]="true" [loanDetials]="details" [masterAndLoanIds]="masterAndLoanIds"
-                    [disbursed]="true">
-                </kt-disburse>
+        <div class="col-12 card kt-padding-15">
+            <label class="font-weight-bold text-color kt-margin-b-25 kt-margin-t-25">Upload Terms & Conditions</label>
+
+            <div class="row justify-content-center" *ngIf="masterLoanId">
+                <div class="col-4 kt-padding-l-20 kt-padding-r-20 kt-margin-b-30"
+                    *ngFor="let image of getURLArray('termsAndConditions'); index as i">
+                    <div *ngIf="image" class="img-container">
+                        <img *ngIf="image" src="../../../../../assets/media/icons/cancel.svg" alt=""
+                            class="kt-pointer remove-icon" (click)="removeTnC(i);">
+                        <div class="pdf" (click)="preview(image)">
+                            <iframe [src]="image | safe : 'resourceUrl'" scrolling="no" *ngIf="isPdf(image)"
+                                height="255"></iframe>
+                        </div>
+                        <img *ngIf="!isPdf(image)" class="fetched-image" [src]="image" (click)="viewPackets(image)">
+
+                    </div>
+                    <div *ngIf="!image">
+                        <div class="img-container kt-pointer" (click)="termsConditions.click(); ">
+                            <img class="placeholder-image" src="../../../../../../assets/media/icons/add.svg"
+                                alt="placeholder">
+                        </div>
+                    </div>
+                    <div>
+                        <label class="text-center w-100 font-weight-500 pacekts-label text-gray">Document Copy
+                            {{i+1}}</label>
+                    </div>
+                    <input type="file" accept="application/pdf" class="d-none" #termsConditions
+                        (change)="uploadTnC($event, i)">
+                </div>
+
+            </div>
+            <div *ngxPermissionsOnly="['addTermsAndCondition']" class="row justify-content-center kt-padding-t-15">
+                <kt-button [value]="'Save'" [type]="'button'" (action)="SaveTnC()"></kt-button>
             </div>
         </div>
-        <div class="col-12 card kt-padding-15" *ngIf="scrapId">
-            <label class="font-weight-bold text-color kt-margin-b-25 kt-margin-t-25">Disbursement</label>
-            <div class="row">
-                <kt-disburse [disable]="true" [scrapDetails]="details" [scrapIds]="scrapIds" [disbursed]="true">
-                </kt-disburse>
+
+        <div class="row kt-margin-t-15">
+            <div class="col-12 card kt-padding-15" *ngIf="masterLoanId">
+                <label class="font-weight-bold text-color kt-margin-b-25 kt-margin-t-25">Disbursement</label>
+                <div class="row">
+                    <kt-disburse [disable]="true" [loanDetials]="details" [masterAndLoanIds]="masterAndLoanIds"
+                        [disbursed]="true">
+                    </kt-disburse>
+                </div>
+            </div>
+            <div class="col-12 card kt-padding-15" *ngIf="scrapId">
+                <label class="font-weight-bold text-color kt-margin-b-25 kt-margin-t-25">Disbursement</label>
+                <div class="row">
+                    <kt-disburse [disable]="true" [scrapDetails]="details" [scrapIds]="scrapIds" [disbursed]="true">
+                    </kt-disburse>
+                </div>
             </div>
         </div>
     </div>
-</div>
