--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/top-up/top-up.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/top-up/top-up.component.html
@@ -29,7 +29,7 @@
                             <td>3,25,000</td>
                             <td>2,95,000</td>
                             <td class="last">
-                                <kt-button [value]="'Ornaments Details'" [type]="'button'" (click)="viewOrnaments()">
+                                <kt-button [value]="'Ornaments Details'" [type]="'button'">
                                 </kt-button>
                             </td>
                         </tr>
