--- a/gold-admin-frontend/src/app/views/partials/components/loan-scrap-details/loan-scrap-details.component.scss
+++ b/gold-admin-frontend/src/app/views/partials/components/loan-scrap-details/loan-scrap-details.component.scss
@@ -26,7 +26,7 @@
     .pdf{
         overflow: hidden;
         border-radius: 15px;
-        // width: 100%;
+        width: 100%;
     }
 
 	iframe {
