--- a/gold-admin-frontend/src/app/views/pages/admin/loan-settings/karat-details/add-karat-details/add-karat-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-settings/karat-details/add-karat-details/add-karat-details.component.html
@@ -12,14 +12,8 @@
                     <mat-spinner [diameter]="20"></mat-spinner>
                 </div>
 
-                <!-- <kt-alert type="warn" [duration]="30000" [showCloseButton]="true" (close)="onAlertClose($event)">
-                            Oh snap! Change a few things up and try submitting again.
-                        </kt-alert> -->
-
-
-
                 <div class="col-lg-12 kt-margin-bottom-20-mobile">
-                    <div class="row">
+                    <div class="row kt-margin-b-15 kt-margin-t-15">
                         <!-- karat details Name -->
                         <div class="col-4 form-label">
                             <label [class.mandatory]="isMandatory ">Karat </label>
@@ -30,9 +24,16 @@
                                 [class.isError]="controls.karat.touched && controls.karat.invalid">
                             <mat-error *ngIf="controls.karat.touched && controls.karat.errors?.required">Required
                                 field</mat-error>
+                            <mat-error *ngIf="controls.karat.touched && controls.karat.errors?.pattern">Enter values
+                                between 0 - 24
+                            </mat-error>
                         </div>
                     </div>
-                    <br>
+
+                    <div class=" offset-4 col-8 kt-margin-b-15">
+                        <mat-slide-toggle formControlName="hm">Hallmarked</mat-slide-toggle>
+                    </div>
+
                     <div class="row">
                         <div class="col-4 form-label">
                             <label [class.mandatory]="isMandatory ">Percentage % </label>
