--- a/gold-admin-frontend/src/app/views/pages/admin/loan-settings/loan-scheme/loan-scheme.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-settings/loan-scheme/loan-scheme.component.html
@@ -55,7 +55,7 @@
                                                 <strong>Default</strong>
                                             </mat-slide-toggle>
                                         </div> -->
-                                        <div class="col" [class.offset-3]="schemeDeatils.schemeType == 'secured'">
+                                        <div class="col offset-3">
                                             <mat-slide-toggle [checked]="schemeDeatils.isActive"
                                                 (change)="changeStatus($event.checked, i, idx,schemeDeatils)">
                                                 <strong>Status</strong>
