--- a/gold-admin-frontend/src/app/views/pages/admin/loan-settings/add-scheme/add-scheme.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-settings/add-scheme/add-scheme.component.scss
@@ -1,4 +1,10 @@
 :host {
+    // ::ng-deep .mat-tab-body-wrapper{
+    //     max-height: 550px !important;  
+    //   }
+      ::ng-deep #fillingForm .mat-tab-body-wrapper{
+        height: 525px !important;  
+      }
     p {
         margin: 0 !important;
     }
@@ -48,5 +54,7 @@
         color           : rgb(193, 193, 193) !important;
 
     }
+
+    
 
 }
