--- a/gold-admin-frontend/src/app/views/partials/components/multi-select-search/multi-select-search.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/multi-select-search/multi-select-search.component.html
@@ -1,5 +1,5 @@
 <div [formGroup]="form">
-    <ng-select [items]="items" [multiple]="multiple" [bindLabel]="bindLabel" [closeOnSelect]="false"
+    <ng-select [items]="items" [multiple]="multiple" [bindLabel]="bindLabel" [closeOnSelect]="false" [class.isError]="isError"
         [bindValue]="bindValue" formControlName="multiSelect" [placeholder]="placeholder" [searchable]="searchable">
         <ng-template ng-header-tmp *ngIf="selectAll">
             <label class="custom-checkbox">
