loanDetails::disbursement and assign packets

--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/packets-list/packets-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/packets-list/packets-list.component.html
@@ -28,7 +28,7 @@
 
                 <ng-container matColumnDef="barcode">
                     <mat-header-cell *matHeaderCellDef>Barcode</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.barcodeNumber | uppercase}}</mat-cell>
+                    <mat-cell *matCellDef="let role">{{role.barcodeNumber}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="internalBranch">
