scheme api integration

--- a/gold-admin-frontend/src/app/views/pages/admin/loan-settings/add-scheme/add-scheme.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-settings/add-scheme/add-scheme.component.html
@@ -14,7 +14,7 @@
                 *ngIf="tabGroup.selectedIndex == 1" (click)="downloadRpgUpdateSheet()">
                 <span class="text-primary csv_pos">
                     <img src="../../../../../assets/media/icons/download.svg" alt="download" height="20"> Download
-                    Sample CSV</span>
+                    Scheme</span>
             </a>
         </div>
 
