paw ticket changes

--- a/gold-loan-backend/templates/pawnTicket-secure-template.html
+++ b/gold-loan-backend/templates/pawnTicket-secure-template.html
@@ -196,7 +196,7 @@
                     </tr>
                     <tr>
                         <td>{{this.loanTenure}} Months</td>
-                        <td>{{this.interestRate}}%</td>
+                        <td>{{this.interestRate}}% per month</td>
                         <td>{{this.penalCharges}}%</td>
                         <td>{{this.processingFee}}</td>
                         <td>{{this.startDate}}</td>
