scrap kyc city, cache

--- a/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-details/user-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-details/user-details.component.html
@@ -239,7 +239,7 @@
 						</div> -->
 					</div>
 
-					<div class="row kt-margin-t-10" *ngIf="controls.panType.value">
+					<div class="row kt-margin-t-15" *ngIf="controls.panImg.value">
 						<div class="col offset-4">
 							<div class="img-container" *ngIf="controls.panImg.value">
 								<img *ngIf="!controls.panImg.value" class=""
