--- a/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-details/user-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-details/user-details.component.html
@@ -112,7 +112,7 @@
 
 						<div class="col-4">
 							<input type="text" aria-label="First name" placeholder="First Name" ktAlphabets
-								class="form-control" formControlName="firstName" [class.isError]="
+								ktTrimControl class="form-control" formControlName="firstName" [class.isError]="
 									controls.firstName.touched &&
 									controls.firstName.invalid
 								" />
@@ -125,7 +125,7 @@
 							</mat-error>
 						</div>
 						<div class="col-4">
-							<input type="text" aria-label="Last name" placeholder="Last Name" ktAlphabets
+							<input type="text" aria-label="Last name" placeholder="Last Name" ktAlphabets ktTrimControl
 								class="form-control" formControlName="lastName" [class.isError]="
 									controls.lastName.touched &&
 									controls.lastName.invalid
