lead-fe::lead chnages

--- a/gold-admin-frontend/src/app/views/pages/admin/lead-management/lead-management.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/lead-management/lead-management.component.html
@@ -181,6 +181,7 @@
                             <mat-menu #menu="matMenu" xPosition="before">
                                 <button *ngxPermissionsOnly="['addNewRequest']" mat-menu-item
                                     (click)="newRequest(loan)">New Request</button>
+                                <button mat-menu-item (click)="assignBranch(loan)">Assign Branch</button>
                             </mat-menu>
                         </div>
                     </mat-cell>
