--- a/gold-admin-frontend/src/app/views/pages/admin/lead-management/add-lead/add-lead.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/lead-management/add-lead/add-lead.component.html
@@ -257,7 +257,7 @@
                                 <select class="form-control" formControlName="internalBranchId"
                                     (change)="patchStateCity($event.target.value)"
                                     [class.isError]="controls.internalBranchId.touched && controls.internalBranchId.invalid">
-                                    <option value="" [disabled]="true" [selected]="true"> Select Internal Branch
+                                    <option [value]=null [disabled]="true" [selected]="true"> Select Internal Branch
                                     </option>
                                     <option *ngFor="let branch of branches" [value]="branch.id">
                                         {{branch.name | titlecase}}
@@ -392,7 +392,8 @@
                 <div class="p-3" *ngIf="data.action != 'view'">
                     <kt-modal-footer *ngIf="data.action == 'add'" (action)="action($event)" [value]="data.action">
                     </kt-modal-footer>
-                    <kt-modal-footer *ngIf="data.action == 'edit'" (action)="action($event)" [value]="'Update'">
+                    <kt-modal-footer *ngIf="data.action == 'edit' || data.action == 'assignBranch'"
+                        (action)="action($event)" [value]="'Update'">
                     </kt-modal-footer>
                 </div>
             </form>
